--- a/firebase-app/Jenkinsfile
+++ b/firebase-app/Jenkinsfile
@@ -1,76 +1,68 @@
 pipeline {
-    agent {
-        docker {
-            image 'node:18'
-            args '-u root:root'
-        }
-    }
+    agent any
 
     environment {
         FIREBASE_TOKEN = credentials('FIREBASE_TOKEN')
     }
 
     options {
-        skipDefaultCheckout()
         timestamps()
+    }
+
+    triggers {
+        // This ensures polling is triggered by GitHub webhook
+        pollSCM('* * * * *') // checks every minute; webhook forces it immediately
     }
 
     stages {
 
         stage('Checkout Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/Mokhaled2004/jenkins.git'
+                echo "🚀 Starting Git checkout…"
+                checkout([
+                    $class: 'GitSCM',
+                    branches: [[name: '*/main']],
+                    doGenerateSubmoduleConfigurations: false,
+                    extensions: [
+                        [$class: 'CleanBeforeCheckout'], // clean workspace
+                        [$class: 'PruneStaleBranch'],    // remove stale branches
+                        [$class: 'WipeWorkspace']        // wipe workspace completely
+                    ],
+                    userRemoteConfigs: [[
+                        url: 'https://github.com/Mokhaled2004/JENKINS.git'
+                        // public repo → no credentials needed
+                    ]]
+                ])
+                echo "✅ Checkout completed successfully!"
             }
         }
 
-        stage('Debug: Check Workspace Files') {
+        stage('List Workspace') {
             steps {
+                echo "📂 Listing workspace files…"
                 sh 'pwd'
                 sh 'ls -la'
             }
         }
 
-        stage('Install Firebase CLI') {
+        stage('Deploy to Firebase') {
             steps {
-                sh 'npm install -g firebase-tools'
-                sh 'firebase --version'
-            }
-        }
-
-        stage('Debug: Check Firebase CLI Location') {
-            steps {
-                sh 'which firebase'
-            }
-        }
-
-        stage('Debug: Check Credential Exists') {
-            steps {
-                script {
-                    sh 'echo "Firebase token length: ${#FIREBASE_TOKEN}"'
+                echo "🚀 Deploying to Firebase hosting..."
+                dir('firebase-app') {
+                    sh 'npm install -g firebase-tools'
+                    sh 'firebase --version'
+                    sh 'firebase deploy --only hosting --token "$FIREBASE_TOKEN" --debug'
                 }
-            }
-        }
-
-        stage('Firebase Auth Test') {
-            steps {
-                sh 'firebase logout || true'
-                sh 'firebase login:ci --token "$FIREBASE_TOKEN"'
-            }
-        }
-
-        stage('Deploy to Firebase Hosting') {
-            steps {
-                sh 'firebase deploy --only hosting --force --debug --token "$FIREBASE_TOKEN"'
             }
         }
     }
 
     post {
         success {
-            echo "🔥 Deployment successful!"
+            echo "✅ Pipeline finished successfully!"
         }
         failure {
-            echo "💀 Deployment failed — check logs!"
+            echo "❌ Pipeline failed!"
         }
     }
 }
